# SignVerifAI

./: .gitignore  README.md  analyze_datasets.py  analyze_quality.py  clean_dataset.py  preprocess_signatures.py  preprocess_toloka.py  pyproject.toml
notebooks/: SignVerifAI_Colab_Training.ipynb
src/signverify/: __init__.py  cli.py  config.py
src/signverify/data/: __init__.py  audit.py  datasets.py  pairs.py  preprocess.py  split.py
src/signverify/models/: __init__.py  backbone.py  losses.py  metrics.py  siamese.py
src/signverify/train/: __init__.py  eval.py  trainer.py
src/signverify/utils/: __init__.py  io.py  logging.py  paths.py  seed.py
